2004-06-10 Hoda Amer
	Fix for PR 66289: [Content assist] menu item contains red square icon
	
2004-06-10 Alain Magloire

	Move from working in progress the checkbox
	enable/disable editor problem annotation.

	* src/org/eclipse/cdt/internal/ui/preferences/CEditorHoverConfigurationblock.java
	* src/org/eclipse/cdt/internal/ui/preferences/WorkingInProgressPreferencePage.java
	* src/org/eclipse/cdt/ui/PrefencecConstants.java
	
2004-06-09 Alain Magloire

	Patch from Sam Rob to resolve 64022

2004-06-09 Tanya Wolff
	Externalized strings from Work In Progress
	Part of PR 66016
	
	* src/org/eclipse/cdt/internal/ui/preferences/PreferencesMessages.properties
	
2004-06-09 Alain Magloire
	Disable extension Work In Progress
	in plugin.xml. Part of PR 66016

	* plugin.xml

2004-06-09 Bogdan Gheorghe
	Fix for  Bug 66273 - Opening declaration causes stack overflow
	
	* src/org/eclipse/cdt/internal/ui/util/EditorUtility.java

2004-06-08 Tanya Wolff
	Fix for Bug 63467 - choice format for displaying plural
	
	* src/org/eclipse/cdt/internal/corext/template/TemplateMessages.properties

2004-06-08 Tanya Wolff
	Fix for bug 66197 : I18N: Invalid key in Code Templates export message
	* src/org/eclipse/cdt/internal/corext.template/TemplateMessages.properties

2004-06-08 Alain Magloire

	Fix for 66188
	The callback acceptProblem() should do nothing.

	* src/org/eclipse/cdt/internal/ui/compare/CParseTreeBuilder.java

2004-06-08 Alain Magloire

	Fix for PR 66186.
	Remove the log() print not necessary
	and users thinks something went wrong.
	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java

2004-06-07 Tanya Wolff
	Fix for Bug 66053 - externalized string in cview

	* src/org/eclipse/cdt/internal/ui/cview/IncludeRefContainer.java
	* src/org/eclipse/cdt/internal/ui/cview/CViewMessages.properties

2004-06-08 Hoda Amer
	Fix for bug 51482, 61039 
	* src/org/eclipse/cdt/internal/ui/preferences/TemplatePreferencePage.java